crates/tm-lang/tests/fixtures/tm-conformance-v2/reject/06_legacy_separator.tm
-- expect: TM1006
let x = 1
---
x
